@@ -1,3 +1,10 @@
+2008-09-26  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* Makefile.am (TARG_ENV_HFILES): Add config/te-solaris.h.
+	* Makefile.in (TARG_ENV_HFILES): Likewise.
+	* configure.tgt (Solaris targets): Set em=solaris.
+	* config/te-solaris.h: New file.
+
 2008-09-25  Richard Henderson  <rth@redhat.com>
 
 	* dw2gencfi.c (DWARF2_ADDR_SIZE): Provide default.
